// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should render correct size when size is: heading 1`] = `
<span
  class="root heading raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      3.5 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled heading star"
      >
        mock svg
      </span>
      <span
        class="root _large filled heading star"
      >
        mock svg
      </span>
      <span
        class="root _large filled heading star"
      >
        mock svg
      </span>
      <span
        class="root _large heading star"
      >
        mock svg
      </span>
      <span
        class="root _large heading star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: heading and rating text is shown 1`] = `
<span
  class="root heading raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      4 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled heading star"
      >
        mock svg
      </span>
      <span
        class="root _large filled heading star"
      >
        mock svg
      </span>
      <span
        class="root _large filled heading star"
      >
        mock svg
      </span>
      <span
        class="root _large filled heading star"
      >
        mock svg
      </span>
      <span
        class="root _large heading star"
      >
        mock svg
      </span>
      <span
        class="textRating"
      >
        4.0
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: headline 1`] = `
<span
  class="root headline raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      3.5 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled headline star"
      >
        mock svg
      </span>
      <span
        class="root _large filled headline star"
      >
        mock svg
      </span>
      <span
        class="root _large filled headline star"
      >
        mock svg
      </span>
      <span
        class="root _large headline star"
      >
        mock svg
      </span>
      <span
        class="root _large headline star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: headline and rating text is shown 1`] = `
<span
  class="root headline raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      4 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled headline star"
      >
        mock svg
      </span>
      <span
        class="root _large filled headline star"
      >
        mock svg
      </span>
      <span
        class="root _large filled headline star"
      >
        mock svg
      </span>
      <span
        class="root _large filled headline star"
      >
        mock svg
      </span>
      <span
        class="root _large headline star"
      >
        mock svg
      </span>
      <span
        class="textRating"
      >
        4.0
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: hero 1`] = `
<span
  class="root hero raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      3.5 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled hero star"
      >
        mock svg
      </span>
      <span
        class="root _large filled hero star"
      >
        mock svg
      </span>
      <span
        class="root _large filled hero star"
      >
        mock svg
      </span>
      <span
        class="root _large hero star"
      >
        mock svg
      </span>
      <span
        class="root _large hero star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct size when size is: hero and rating text is shown 1`] = `
<span
  class="root hero raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      4 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled hero star"
      >
        mock svg
      </span>
      <span
        class="root _large filled hero star"
      >
        mock svg
      </span>
      <span
        class="root _large filled hero star"
      >
        mock svg
      </span>
      <span
        class="root _large filled hero star"
      >
        mock svg
      </span>
      <span
        class="root _large hero star"
      >
        mock svg
      </span>
      <span
        class="textRating"
      >
        4.0
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 0 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      0 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 2.74 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      2.74 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 2.75 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      2.75 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 3.74 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      3.74 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 3.75 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      3.75 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large standard star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render correct star rating when rating is: 5 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      5 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render with className 1`] = `
<span
  class="root root-class-name standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      5 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render with description 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      5 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="textRating"
      >
        5.0 overall rating from...
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render with description as a component 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      5 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="textRating"
      >
        5.0 
        <span>
          overall rating
        </span>
      </span>
    </span>
  </span>
</span>
`;

exports[`Rating should render with starClassName 1`] = `
<span
  class="root standard raw baseline"
>
  <span
    class="root"
  >
    <span
      class="root"
    >
      5 out of 5
    </span>
    <span
      class="rating"
    >
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
      <span
        class="root _large filled standard star"
      >
        mock svg
      </span>
    </span>
  </span>
</span>
`;
